<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_forecast_day_date_statement" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_forecast_day_temperature_statement" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_forecast_day_pressure_statement" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHumidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_forecast_day_humidity_statement" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_forecast_day_description_statement" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>